--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@upstash/redis": "^1.29.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "hono": "^4.2.3",
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "redis": "^4.6.13",
-    "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -28,6 +30,7 @@
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.2",
     "typescript": "^5"
   }
